# mindquantum

./: .clang-format  .cmake-format.yaml  .gitignore  .gitlab-ci.yml  .pre-commit-config-format.yml  .pre-commit-config.yaml  CMakeLists.txt  INSTALL.md  README.md  RELEASE.md  VERSION.txt  build.bat  build.ps1  build.sh  build_locally.bat  build_locally.ps1  build_locally.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
ccsrc/cxx_experimental/: CMakeLists.txt
ccsrc/cxx_experimental/include/: CMakeLists.txt  decompositions.hpp
ccsrc/cxx_experimental/include/cengines/: compute.hpp  config.hpp  cpp_decomposition.hpp  cpp_engine_list.hpp  cpp_graph_mapper.hpp  cpp_mapping.hpp  cpp_optimisation.hpp  cpp_printer.hpp  cpp_printer.tpp  cpp_resource_counter.hpp  write_projectq.hpp
ccsrc/cxx_experimental/include/core/: circuit_block.hpp  circuit_block.tpp  circuit_manager.hpp  circuit_manager.tpp  compute.hpp  concepts.hpp  config.hpp  control.hpp  cpp_core.hpp  dagger.hpp  engine_concepts.hpp  gate_concepts.hpp  gate_traits.hpp  operator_traits.hpp  traits.hpp  types.hpp
ccsrc/cxx_experimental/include/core/details/: clang_version.hpp  cxx20_compatibility.hpp  detected.hpp  external_view.hpp  physical_view.hpp  projectq_view.hpp  visitor.hpp
ccsrc/cxx_experimental/include/decompositions/: atom_meta.hpp  atom_storage.hpp  atom_storage.tpp  config.hpp  decomposition_atom.hpp  decomposition_rule.hpp  decomposition_rule.tpp  gate_decomposer.hpp  gate_decomposer.tpp  gate_decomposition_rule.hpp  non_gate_decomposition_rule.hpp  non_gate_decomposition_rule.tpp  parametric_atom.hpp  parametric_atom.tpp  trivial_atom.hpp  trivial_atom.tpp
ccsrc/cxx_experimental/include/decompositions/details/: concepts.hpp  decomposition_param.hpp  gate_decomposition_rule_cxx17.hpp  gate_decomposition_rule_cxx17.tpp  gate_decomposition_rule_cxx20.hpp  gate_decomposition_rule_cxx20.tpp  traits.hpp
ccsrc/cxx_experimental/include/decompositions/rules/: cnot2cz.hpp  cnot2rxx.hpp  cnu2toffoliandcu.hpp  config.hpp  crz2cxandrz.hpp  entangle.hpp  h2rx.hpp  no_control_ph.hpp  ph2r.hpp  qft2crandhadamard.hpp  r2rzandph.hpp  rx2rz.hpp  ry2rz.hpp  rz2rxandry.hpp  sqrtswap2cnotandsqrtx.hpp  swap2cnot.hpp  toffoli2cnotandtgate.hpp
ccsrc/cxx_experimental/include/details/: macros_conv_begin.hpp  macros_conv_end.hpp
ccsrc/cxx_experimental/include/mapping/: partial_placer.hpp  types.hpp
ccsrc/cxx_experimental/include/ops/: cpp_command.hpp  gates.hpp
ccsrc/cxx_experimental/include/ops/gates/: allocate.hpp  deallocate.hpp  entangle.hpp  invalid.hpp  measure.hpp  ph.hpp  qft.hpp  qubit_operator.hpp  sqrtswap.hpp  time_evolution.hpp
ccsrc/cxx_experimental/include/ops/meta/: dagger.hpp
ccsrc/cxx_experimental/include/ops/parametric/: angle_base.hpp  angle_gates.hpp  concepts.hpp  config.hpp  gate_base.hpp  param_names.hpp  register_gate_type.hpp  register_gate_type.tpp  substitutions.hpp  substitutions.tpp  time_evolution.hpp  to_symengine.hpp  traits.hpp
ccsrc/cxx_experimental/include/simulator/: CMakeLists.txt  aligned_allocator.hpp  cintrin.hpp  for_each.hpp  projectq_simulator.hpp  simbackends.hpp  simulator_base.hpp  to_array.hpp
ccsrc/cxx_experimental/include/simulator/_cppkernels/: fusion.hpp  simulator.hpp
ccsrc/cxx_experimental/include/simulator/_cppkernels/intrin/: alignedallocator.hpp  cintrin.hpp  kernel1.hpp  kernel2.hpp  kernel3.hpp  kernel4.hpp  kernel5.hpp  kernels.hpp
ccsrc/cxx_experimental/include/simulator/_cppkernels/nointrin/: kernel1.hpp  kernel2.hpp  kernel3.hpp  kernel4.hpp  kernel5.hpp  kernels.hpp
ccsrc/cxx_experimental/include/simulator/_cppkernels/nvidia/: gmem.h
ccsrc/cxx_experimental/include/simulator/_cppkernels/scalar/: kernel3.hpp  kernel4.hpp  kernel5.hpp
ccsrc/cxx_experimental/include/simulator/include/: debug_info.hpp  dispatch.hpp  fusion.hpp  instrset.hpp  kernel_counter.hpp  neon_functions.hpp  simulator.hpp  types.hpp
ccsrc/cxx_experimental/include/simulator/src/: kernels.cpp  simulator.cpp
ccsrc/cxx_experimental/lib/: CMakeLists.txt
ccsrc/cxx_experimental/lib/cengines/: CMakeLists.txt  cpp_decomposition.cpp  cpp_graph_mapper.cpp  cpp_resource_counter.cpp  write_projectq.cpp
ccsrc/cxx_experimental/lib/core/: CMakeLists.txt  circuit_block.cpp  circuit_manager.cpp  cpp_core.cpp
ccsrc/cxx_experimental/lib/decompositions/: CMakeLists.txt  atom_storage.cpp  gate_decomposer.cpp  qubit_operator2single_qubit.cpp  r2rzandph.cpp  rx2rz.cpp  ry2rz.cpp  rz2rx.cpp  sqrtswap2cnot.cpp  swap2cnot.cpp  time_evolution.cpp  toffoli2cnotandtgate.cpp
ccsrc/cxx_experimental/lib/mapping/: partial_placer.cpp
ccsrc/cxx_experimental/lib/ops/: CMakeLists.txt
ccsrc/cxx_experimental/lib/ops/parametric/: register_gate_type.cpp
ccsrc/cxx_experimental/lib/simulator/: CMakeLists.txt  instrset.cpp  projectq_simulator.cpp  simbackends.cpp
ccsrc/cxx_experimental/python/: CMakeLists.txt
ccsrc/cxx_experimental/python/include/: bindings.hpp
ccsrc/cxx_experimental/python/include/cengines/: base.hpp  decomposition.hpp  engine_list.hpp  instruction_filter.hpp  mapping.hpp  optimisation.hpp  printer.hpp  resource_counter.hpp  tag_remover.hpp
ccsrc/cxx_experimental/python/include/core/: core.hpp
ccsrc/cxx_experimental/python/include/details/: macros_conv_begin.hpp  macros_conv_end.hpp  python2cpp_conv.hpp  python_api.hpp
ccsrc/cxx_experimental/python/include/ops/: command.hpp
ccsrc/cxx_experimental/python/include/python/: bindings.hpp  config.hpp
ccsrc/cxx_experimental/python/lib/: _mindquantum_cxx.cpp  _mindquantum_cxx_core.cpp
ccsrc/cxx_experimental/python/lib/cengines/: base.cpp  cengines.cpp  engine_list.cpp  mapping.cpp  optimisation.cpp  printer.cpp  resource_counter.cpp
ccsrc/cxx_experimental/python/lib/core/: circuit.cpp  core.cpp  symengine.cpp
ccsrc/cxx_experimental/python/lib/ops/: _mindquantum_cxx_ops.cpp  command.cpp  ops.cpp
ccsrc/cxx_experimental/python/lib/simulator/: simulator.cpp
ccsrc/mq_base/: CMakeLists.txt
ccsrc/mq_base/core/: type.h  utils.h
ccsrc/mq_base/pr/: parameter_resolver.h
ccsrc/mqbackend/: CMakeLists.txt  binding.cc
(+389 files in other folders)
